--- a/webassembly/assets/index.html
+++ b/webassembly/assets/index.html
@@ -1,18 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Compile Golang Binary</title>a
-    <script src="wasm_exec.js"></script>
-    <script>
-        const go = new Go();
-        WebAssembly.instantiateStreaming(fetch("json.wasm"), go.importObject) // init our module
-            .then((result) => {
-                go.run(result.instance);
-            })
-    </script>
+    <meta charset="UTF-8"/>
+    <title>Go wasm</title>
 </head>
-<body>
 
+<body>
+<script src="wasm_exec.js"></script>
+
+<script>
+    if (!WebAssembly.instantiateStreaming) {
+        // polyfill
+        WebAssembly.instantiateStreaming = async (resp, importObject) => {
+            const source = await (await resp).arrayBuffer();
+            return await WebAssembly.instantiate(source, importObject);
+        };
+    }
+
+    const go = new Go();
+
+    let mod, inst;
+
+    WebAssembly.instantiateStreaming(fetch("lib.wasm"), go.importObject).then(
+        result => {
+            mod = result.module;
+            inst = result.instance;
+            document.getElementById("runButton").disabled = false;
+        }
+    );
+
+    async function run() {
+        await go.run(inst);
+        inst = await WebAssembly.instantiate(mod, go.importObject); // reset instance
+    }
+</script>
+
+<button onClick="run();" id="runButton" disabled>Run</button>
 </body>
 </html>
